task C the other one way